初始化测试模版内容

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -2,8 +2,8 @@
  * @Author: hfxie
  * @Date: 2023-09-12 10:10:10
  * @LastEditors: haifeng_xie haifeng_xie@kingdee.com
- * @LastEditTime: 2023-09-14 09:45:55
- * @Description: 本地开发入口-脚手架
+ * @LastEditTime: 2023-09-12 11:05:55
+ * @Description: 本地开发入口
 -->
 <!DOCTYPE html>
 <html lang="en">
